--- a/CSS-Grids/free-code-camp-example/styles.css
+++ b/CSS-Grids/free-code-camp-example/styles.css
@@ -1,11 +1,11 @@
-.container > div {
-    justify-content: center;
-    align-items: center;
+.container {
     font-size: 2em;
     color: #ffeead;
     /* CSS Grid */
     display: grid;
-    grid-gap: 10px;
+    grid-template-columns: 250px 250px 250px;
+    grid-template-rows: 250px 250px 250px;
+    gap: 10px;
 }
 
 html, body {
