--- a/CSS-Grids/free-code-camp-example/styles.css
+++ b/CSS-Grids/free-code-camp-example/styles.css
@@ -3,8 +3,8 @@
     color: #ffeead;
     /* CSS Grid */
     display: grid;
-    grid-template-columns: 250px 250px 250px;
-    grid-template-rows: 250px 250px 250px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 150px);
     gap: 10px;
 }
 
