--- a/CSS-Grids/free-code-camp-example/index.css
+++ b/CSS-Grids/free-code-camp-example/index.css
@@ -7,20 +7,21 @@
 }
 
 .header {
-    grid-column: 1/-1; /* span full width of all columns */
+    grid-row: 1/2;
+    grid-column: 4/-1; /* span full width of all columns */
 }
 
 .menu {
-
+    grid-row: 1/3;
+    grid-column: 1/4;
 }
 
 .content {
-    grid-column: 2/-1;
+    grid-row: 2/3;
+    grid-column: 4/-1;
 }
 
 .footer {
+    grid-row: 3/3;
     grid-column: 1/-1;
-}
-.footer-two {
-    grid-column: 4/13;
 }
