--- a/CSS-Grids/free-code-camp-example/styles.css
+++ b/CSS-Grids/free-code-camp-example/styles.css
@@ -12,6 +12,7 @@
     height: 100%;
     padding: 10px;
     margin: 0px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   }
   
   .container > div:nth-child(1n) {
