--- a/CSS-Grids/Mondrian-recreation/index.css
+++ b/CSS-Grids/Mondrian-recreation/index.css
@@ -1,8 +1,8 @@
 .container {
-    height: 80%;
-    width: 70%;
+    height: 100%;
+    /* width: 70%; */
     display: grid;
-    grid-gap: 3px;
+    grid-gap: 8px;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(10, 1fr);
 }
@@ -48,4 +48,8 @@
 .j {
     grid-row: 5/10;
     grid-column: 8/13;
+}
+.k {
+    grid-row: 10/10;
+    grid-column: 1/-1;
 }
