--- a/CSS-Grids/Mondrian-recreation/styles.css
+++ b/CSS-Grids/Mondrian-recreation/styles.css
@@ -8,7 +8,7 @@
   
   html, body {
     box-sizing: border-box;
-    background-color: #ffeead;
+    background-color: black;
     height: 100%;
     padding: 10px;
     margin: 0px;
