--- a/CSS-Grids/free-code-camp-example/index.css
+++ b/CSS-Grids/free-code-camp-example/index.css
@@ -4,24 +4,31 @@
     grid-gap: 3px;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 150px auto 150px;
+    grid-template-areas: 
+        "m m m h h h h h h h h h"
+        "m m m c c c c c c c c c"
+        ". f f f f f f f f f f .";
 }
 
+/* 1 / -1 span full width of all columns */
+
+
 .header {
-    grid-row: 1/2;
-    grid-column: 4/-1; /* span full width of all columns */
+    
+    grid-area: h; 
 }
 
 .menu {
-    grid-row: 1/3;
-    grid-column: 1/4;
+    
+    grid-area: m;
 }
 
 .content {
-    grid-row: 2/3;
-    grid-column: 4/-1;
+    
+    grid-area: c;
 }
 
 .footer {
-    grid-row: 3/3;
-    grid-column: 1/-1;
+    
+    grid-area: f;
 }
