--- a/CSS-Grids/Huff-Post/styles.css
+++ b/CSS-Grids/Huff-Post/styles.css
@@ -2,10 +2,11 @@
 
 /* Our  Main Container */
 .container {
+    height: auto;
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(14, 1fr);
-    grid-template-rows: 78px 480px;
+    grid-template-rows: repeat(20, auto);
 }
 
 /* Small devices (tablets, 768px and up) */
@@ -16,49 +17,60 @@
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 850px) { 
 
+    /* Our  Main Container */
+    .container {
+        height: auto;
+        display: grid;
+        grid-gap: 3px;
+        grid-template-columns: repeat(14, 1fr);
+        grid-template-rows: repeat(20, auto);
+        /* grid-template-areas: ; */
+    }
+
     /* Navbar */
-    .hamburger-menu {
+    .navbar {
         grid-row: 1 / 2;
-        grid-column: 1 / 2;
-    }
-    .logo {
-        grid-row: 1 / 2;
-        grid-column: 6 / 11;
-    }
-    .social-icons {
-        grid-row: 1 / 2;
-        grid-column: 11 / -1;
+        grid-column: 1 / -1;
+        height: 78px;
     }
 
     /* Main Section */
     .bg-img {
-        grid-row: 2 / 3;
+        grid-row: 2 / 8;
         grid-column: 1 / -1;
+        /* height: 480px; */
     }
 
     /* Section One - Left */
     .sec-1-left {
-        grid-row: 3 / 4;
+        grid-row: 8 / 14;
         grid-column: 2 / 6;
-        height: 680px;
+        /* height: 680px; */
     }
     
     /* Section Two - Center */
     .sec-2-center {
-        grid-row: 3 / 4;
+        grid-row: 8 / 15;
         grid-column: 6 / 11;
-        height: 850px;
+        /* height: 850px; */
     }
 
     /* Section Three - Right */
     .sec-3-right {
-        grid-row: 3 / 4;
+        grid-row: 8 / 13;
         grid-column: 11 / 14;
-        height: 550px;
+        /* height: 550px; */
     }
     .sec-4-right {
-        grid-row: 4 / 5;
-        grid-auto-columns: 4 / 5;
+        grid-row: 13 / 16;
+        grid-column: 11 / 14;
+    }
+
+    /* News Section */
+    /* News Big Story */
+    .news-big {
+        grid-row: 16 / 19;
+        grid-column: 2 / 11;
     }
 
 } 
