--- a/CSS-Grids/Huff-Post/styles.css
+++ b/CSS-Grids/Huff-Post/styles.css
@@ -1,152 +1,27 @@
-/* Mobile first by default */
+/* This Contains our styling for our elements */
 
-/* Our  Main Container */
-.container {
-    height: auto;
-    display: grid;
-    grid-gap: 3px;
-    grid-template-columns: repeat(12, 1fr); 
-    grid-template-rows: auto;
+@charset "UTF-8";
+
+@font-face {
+    font-family: ProximaNovaregular;
+    src: url("font/MARK\ SIMONSON\ -\ PROXIMA\ NOVA\ REGULAR.OTF") format("opentype");
 }
 
-/* Navbar */
-.navbar {
-    grid-row: 1 / 2;
-    grid-column: 1 / -1;
-    height: 68px;
+@font-face {
+    font-family: ProximaNovaBold;
+    font-weight: bold;
+    src: url("font/MARK\ SIMONSON\ -\ PROXIMA\ NOVA\ BOLD.OTF") format("opentype");
 }
 
-/* Main Section */
-.bg-img {
-    grid-row: 2 / 8;
-    grid-column: 1 / -1;
+html {
+  box-sizing: border-box;
 }
-
-/* Section One - Left */
-.sec-1-left {
-    grid-row: 8 / 14;
-    grid-column: 1 / -1;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
-
-/* Section Two - Center */
-.sec-2-center {
-    grid-row: 14 / 16;
-    grid-column: 1 / -1;
+body {
+	font-family: "ProximaNovaregular", Arial, Geneva, sans-serif;
+	/* background-image: url(../img/clouds.png); */
+	margin: 0px;
+	padding: 0px;
 }
-
-/* Section Three - Right */
-.sec-3-right {
-    grid-row: 16 / 18;
-    grid-column: 1 / -1;
-}
-.sec-4-right {
-    grid-row: 18 / 21;
-    grid-column: 1 / -1;
-}
-
-/* News Section */
-/* News Big Story */
-.news-big {
-    grid-row: 21 / 23;
-    grid-column: 1 / -1;
-}
-/* News story left */
-.news-left {
-    grid-row: 23 / 25;
-    grid-column: 1 / -1;
-}
-/* News story right */
-.news-right {
-    grid-row: 25 / 27;
-    grid-column: 1 / -1;
-}
-
-/* Trending Stories Section */
-.trending-stories {
-    grid-row: 27 / 29;
-    grid-column: 1 / -1;
-}
-
-
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 550px) { 
-
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: 850px) { 
-
-    /* Our  Main Container */
-    .container {
-        height: auto;
-        display: grid;
-        grid-gap: 3px;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-        grid-auto-rows: 25%;
-        grid-auto-flow: dense;
-    }
-
-    /* Navbar */
-    .navbar {
-        grid-row: 1 / 2;
-        grid-column: 1 / -1;
-        height: 78px;
-    }
-
-    /* Main Section */
-    .bg-img {
-        grid-row: 2 / 8;
-        grid-column: 1 / -1;
-        height: 480px;
-    }
-
-    /* Section One - Left */
-    .sec-1-left {
-        grid-row: 8 / 14;
-        grid-column: 2 / 5;
-        /* height: 680px; */
-    }
-    
-    /* Section Two - Center */
-    .sec-2-center {
-        grid-row: 8 / 15;
-        grid-column: 5 / 10;
-        height: 850px;
-    }
-
-    /* Section Three - Right */
-    .sec-3-right {
-        grid-row: 8 / 13;
-        grid-column: 10 / 13;
-        /* height: 550px; */
-    }
-    .sec-4-right {
-        grid-row: 13 / 16;
-        grid-column: 10 / 13;
-    }
-
-    /* News Section */
-    /* News Big Story */
-    .news-big {
-        grid-row: 16 / 19;
-        grid-column: 2 / 10;
-    }
-    /* News story left */
-    .news-left {
-        grid-row: 19 / 21;
-        grid-column: 2 / 6;
-    }
-    /* News story right */
-    .news-right {
-        grid-row: 19 / 21;
-        grid-column: 6 / 10;
-    }
-
-    /* Trending Stories Section */
-    .trending-stories {
-        grid-row: 16 / 21;
-        grid-column: 10 / 13;
-    }
-
-} 
