--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -13,11 +13,11 @@
 .navbar {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
-    height: 68px;
+    /* height: 68px; */
 }
 
 /* Main Section */
-.bg-img {
+.main-content-wrapper {
     grid-row: 2 / 8;
     grid-column: 1 / -1;
 }
@@ -81,7 +81,7 @@
     .container {
         height: auto;
         display: grid;
-        grid-gap: 3px;
+        grid-gap: 0;
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
         grid-auto-rows: 25%;
         grid-auto-flow: dense;
@@ -93,9 +93,9 @@
         grid-column: 1 / -1;
         height: 78px;
     }
-
+    
     /* Main Section */
-    .bg-img {
+    .main-content-wrapper {
         grid-row: 2 / 8;
         grid-column: 1 / -1;
         height: 480px;
