--- a/CSS-Grids/Huff-Post/styles.css
+++ b/CSS-Grids/Huff-Post/styles.css
@@ -21,7 +21,49 @@ html {
 }
 body {
 	font-family: "ProximaNovaregular", Arial, Geneva, sans-serif;
-	/* background-image: url(../img/clouds.png); */
 	margin: 0px;
 	padding: 0px;
+}
+
+/* Navbar styling */
+.navbar {
+    background-color: black;
+    height: 68px;
+}
+.logo-wrapper {
+    justify-content: center;
+    align-items: center;
+}
+.logo img {
+    margin: 1em auto;
+    width: 250px;
+    display: block;
+}
+
+/* Main Section */
+/* Main Section background Image*/
+.main-content-wrapper {
+    background-size: cover;
+    background-position: 50% 50%;
+}
+.main-content-overlay {
+    background-color: rgba(0,0,0,0.4);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.4), transparent 100%);
+}
+/* Main Section Headline H1 */
+.main-content-h1-w {
+    width: 980px;
+    margin: 0 auto;
+    text-align: center;
+}
+.main-content-h1 {
+    font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
+    color: white;
+    font-size: 5.125rem;
+    text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+}
+.main-content-h1:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    text-decoration-color: #0DBE98;
 }
