--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -1,70 +1,80 @@
 /* Mobile first by default */
 
-/* Our  Main Container */
-.container {
-    height: auto;
-    display: grid;
-    grid-gap: 3px;
-    grid-template-columns: repeat(12, 1fr); 
-    grid-template-rows: auto;
-}
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 
-/* Navbar */
-.navbar {
-    grid-row: 1 / 2;
-    grid-column: 1 / -1;
-    /* height: 68px; */
-}
+    /* Our  Main Container */
+    .container {
+        height: auto;
+        display: grid;
+    }
 
-/* Main Section */
-.main-content-wrapper {
-    grid-row: 2 / 8;
-    grid-column: 1 / -1;
-}
+    /* Navbar */
+    .navbar {
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        height: 7em;
+    }
 
-/* Section One - Left */
-.sec-1-left {
-    grid-row: 8 / 14;
-    grid-column: 1 / -1;
-}
+    /* Main Logo */
+    .logo img {
+        height: 4em;
+        width: 27em;
+        display: block;
+        margin: 1.5rem auto;
+    }
 
-/* Section Two - Center */
-.sec-2-center {
-    grid-row: 14 / 16;
-    grid-column: 1 / -1;
-}
+    /* Main Section */
+    .main-content-wrapper {
+        grid-row: 2 / 8;
+        grid-column: 1 / -1;
+    }
 
-/* Section Three - Right */
-.sec-3-right {
-    grid-row: 16 / 18;
-    grid-column: 1 / -1;
-}
-.sec-4-right {
-    grid-row: 18 / 21;
-    grid-column: 1 / -1;
-}
+    /* Section One - Left */
+    .sec-1-left {
+        grid-row: 8 / 14;
+        grid-column: 1 / -1;
+    }
 
-/* News Section */
-/* News Big Story */
-.news-big {
-    grid-row: 21 / 23;
-    grid-column: 1 / -1;
-}
-/* News story left */
-.news-left {
-    grid-row: 23 / 25;
-    grid-column: 1 / -1;
-}
-/* News story right */
-.news-right {
-    grid-row: 25 / 27;
-    grid-column: 1 / -1;
-}
+    /* Section Two - Center */
+    .sec-2-center {
+        grid-row: 14 / 16;
+        grid-column: 1 / -1;
+    }
 
-/* Trending Stories Section */
-.trending-stories {
-    grid-row: 27 / 29;
-    grid-column: 1 / -1;
+    /* Section Three - Right */
+    .sec-3-right {
+        grid-row: 16 / 18;
+        grid-column: 1 / -1;
+    }
+    .sec-4-right {
+        grid-row: 18 / 21;
+        grid-column: 1 / -1;
+    }
+
+    /* News Section */
+    /* News Big Story */
+    .news-big {
+        grid-row: 21 / 23;
+        grid-column: 1 / -1;
+    }
+    /* News story left */
+    .news-left {
+        grid-row: 23 / 25;
+        grid-column: 1 / -1;
+    }
+    /* News story right */
+    .news-right {
+        grid-row: 25 / 27;
+        grid-column: 1 / -1;
+    }
+
+    /* Trending Stories Section */
+    .trending-stories {
+        grid-row: 27 / 29;
+        grid-column: 1 / -1;
+    }
+
 }
 
 
@@ -74,8 +84,8 @@
 
 }
 
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: 850px) { 
+/* Desktops and laptops ----------- */
+@media only screen  and (min-width : 1224px) {
 
     /* Our  Main Container */
     .container {
@@ -91,14 +101,14 @@
     .navbar {
         grid-row: 1 / 2;
         grid-column: 1 / -1;
-        height: 78px;
+        /* height: 78px; */
     }
     
     /* Main Section */
     .main-content-wrapper {
         grid-row: 2 / 8;
         grid-column: 1 / -1;
-        height: 480px;
+        /* height: 480px; */
     }
 
     /* Section One - Left */
