--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -305,12 +305,19 @@ body {
         grid-column: 2 / 5;
         /* height: 680px; */
         /* Styling */
-        background-color: grey;
+    }
+    .top-title-box {
+        padding: 1em;
+        background-color: #ffffff;
     }
     .top-title-flag {
         font-style: italic;
         background: #F83371;
         color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 2em;
     }
     .top-title-flag h1 {
         padding: 0 15px;
@@ -323,7 +330,7 @@ body {
         max-width: 100%;
     }
     .tp-main-card-details {
-        border-bottom: 1px solid black;
+        border-bottom: 0.8px solid #b6b6b6;
     }
     .tp-main-card-link:hover {
         text-decoration: underline;
@@ -334,11 +341,15 @@ body {
     }
     .tp-small-cards-wrapper {
         padding: 1.3rem 0;
-        border-bottom: 1px solid black;
+    }
+    .tp-small-card-img {
+        margin-bottom: 1em;
     }
     .tp-small-card {
         display: flex;
         flex-direction: row;
+        border-bottom: 0.8px solid #b6b6b6;
+        margin-bottom: 1em;
     }
     .tp-small-card-link:hover {
         text-decoration: underline;
@@ -346,7 +357,6 @@ body {
     .tp-small-card-details {
         padding: 0 0.8em;
     }
-
 
 
 /* ------------------------------- */
