--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -418,16 +418,15 @@ body {
     /* Section Two - Center */
     .sec-2-center {
         grid-row: 8 / 15;
-        grid-column: 5 / 10;
+        grid-column: 5 / 12;
         height: 850px;
-        background-color: #666666;
     }
     /* Huffing Post Zone Center */
     .hp-z-center {
 
     }
     .hp-z-center-box {
-
+        padding: 1em;
     }
     .hp-z-center-img-wrapper {
     }
@@ -441,37 +440,49 @@ body {
 
     }
     .hp-z-center-text {
-
+        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
+        font-size: 2.375rem;
+        line-height: 2.375rem;
+        letter-spacing: 0.5px;
     }
     /* HP Zone Center Details */
     .hp-z-center-details {
 
     }
     .hp-z-center-des {
-
+        margin: 0.5em 0;
     }
     .hp-z-center-des-link {
 
     }
     .hp-z-center-des-text {
-
+        font-family: "ProximaNovaLight", Arial, Geneva, sans-serif;
+        font-size: 1.125rem;
+        line-height: 1.375rem;
     }
-    .hp-z-center-author{}
+    .hp-z-center-author{
+        margin: 0.8em 0;
+    }
     .hp-z-center-author-link{}
-    .hp-z-center-author-text{}
+    .hp-z-center-author-text{
+        color: #F83371;
+        font-size: 0.8125rem;
+        line-height: 0.9375rem;
+        font-weight: normal;
+    }
 
 /* ------------------------------- */
     /* Section Three - Right */
     .sec-3-right {
         grid-row: 8 / 13;
-        grid-column: 10 / 13;
+        grid-column: 12 / 13;
         /* height: 550px; */
         /* background-color: #888888; */
     }
 /* ------------------------------- */
     .sec-4-right {
         grid-row: 13 / 16;
-        grid-column: 10 / 13;
+        grid-column: 12 / 13;
         /* background-color: #424242; */
     }
 /* ------------------------------- */
