--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -468,7 +468,7 @@ body {
     /* Section Two - Center */
     .sec-2-center {
         grid-row: 8 / 15;
-        grid-column: 5 / 12;
+        grid-column: 5 / 11;
         height: 850px;
     }
     /* Huffing Post Zone Center */
@@ -524,15 +524,67 @@ body {
 /* ------------------------------- */
     /* Section Three - Right */
     .sec-3-right {
-        grid-row: 8 / 13;
-        grid-column: 12 / 13;
+        grid-row: 8 / 15;
+        grid-column: 11 / 14;
         /* height: 550px; */
-        /* background-color: #888888; */
     }
+    /* Latest News */
+    .ln-news-section {
+        padding: 0 0.5em;
+    }
+    .ln-title-box {
+        display: grid;
+        grid-template-columns: 3fr 6fr;
+        grid-template-rows: 2.5em;
+    }
+    .ln-title-flag {
+
+    }
+    .ln-title-text {
+        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
+        font-size: 1.0625rem;
+        font-style: italic;
+    }
+    .ln-title-line-box {
+        padding: 1.5em 0.5em;
+    }
+    .ln-title-line {
+        height: 3px;
+        background: #000000;
+    }
+    /* LN news cards */
+    .ln-news-card-wrapper {
+        margin: 0 0 1em 0;
+    }
+    .ln-news-card-details {
+        padding: 0.5em;
+        border-bottom: 0.8px solid #b6b6b6;
+    }
+    .ln-news-card-details:hover {
+        background-color: #F4FBF9;
+    }
+    .ln-news-card-text-wrapper {
+        margin: 0.5em 0;
+    }
+    .ln-news-card-link:hover {
+        text-decoration: underline;
+    }
+    .ln-news-card-text {}
+    .ln-news-card-time-text {
+        margin: 0 0 0.5em 0;
+    }
+    .ln-news-time-text {
+        font-family: "ProximaNovaLight", Arial, Geneva, sans-serif;
+        font-size: 0.8125rem;
+        line-height: 0.9375rem;
+        letter-spacing: 0.5px;
+        color: #757575;
+    }
+
 /* ------------------------------- */
     .sec-4-right {
         grid-row: 13 / 16;
-        grid-column: 12 / 13;
+        grid-column: 11 / 14;
         /* background-color: #424242; */
     }
 /* ------------------------------- */
