--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -309,6 +309,71 @@ body {
     grid-row: 18 / 21;
     grid-column: 1 / -1;
   }
+  .ne-news-section {
+    /* padding: 0 0.5em; */
+  }
+  .ne-news-title-box {
+    display: grid;
+    grid-template-columns: 4fr 5fr;
+    grid-template-rows: 2.5em;
+    margin: 0 0 1em 0;
+  }
+  .ne-news-title-text {
+    font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
+    font-size: 1.3725rem;
+    font-style: italic;
+  }
+  /* New title line */
+  .ne-news-title-line-box {
+    padding: 1.8em 0.5em;
+  }
+  .ne-news-title-line {
+    height: 3px;
+    background: #000000;
+  }
+  /* New title content */
+  .ne-news-content-card-wrapper {
+
+  }
+  .ne-news-content-card {
+    /* display: flex;
+    flex-direction: row; */
+    margin-bottom: 1em;
+  }
+  .ne-news-content-img-wrapper {
+
+  }
+  .ne-news-content-img {
+    max-width: 100%;
+  }
+  .ne-news-content-wrapper {
+    padding: 0 0.8em;
+  }
+  .ne-news-content-headline {}
+  .ne-news-content-link {}
+  .ne-news-content-text {
+    display: none;
+  }
+  .ne-news-content-details {}
+  .ne-news-content-des {
+    margin: 0.5em 0;
+  }
+  .ne-news-content-des-link {}
+  .ne-news-content-des-text {
+    font-family: "ProximaNovaLight", Arial, Geneva, sans-serif;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+  }
+  .ne-news-content-author {}
+  .ne-news-content-author-link {}
+  .ne-news-content-author-text {
+    color: #f83371;
+    font-size: 0.8125rem;
+    line-height: 0.9375rem;
+    font-weight: normal;
+  }
+
+  /* -------------------------------- */
   /* News story left */
   .news-left {
     grid-row: 21 / 23;
