--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -333,7 +333,6 @@ body {
   }
   /* New title content */
   .ne-news-content-card-wrapper {
-
   }
   .ne-news-content-card {
     /* display: flex;
@@ -341,7 +340,6 @@ body {
     margin-bottom: 1em;
   }
   .ne-news-content-img-wrapper {
-
   }
   .ne-news-content-img {
     max-width: 100%;
@@ -349,23 +347,29 @@ body {
   .ne-news-content-wrapper {
     padding: 0 0.8em;
   }
-  .ne-news-content-headline {}
-  .ne-news-content-link {}
+  .ne-news-content-headline {
+  }
+  .ne-news-content-link {
+  }
   .ne-news-content-text {
     display: none;
   }
-  .ne-news-content-details {}
+  .ne-news-content-details {
+  }
   .ne-news-content-des {
     margin: 0.5em 0;
   }
-  .ne-news-content-des-link {}
+  .ne-news-content-des-link {
+  }
   .ne-news-content-des-text {
     font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
     font-size: 1.875rem;
     line-height: 2rem;
   }
-  .ne-news-content-author {}
-  .ne-news-content-author-link {}
+  .ne-news-content-author {
+  }
+  .ne-news-content-author-link {
+  }
   .ne-news-content-author-text {
     color: #f83371;
     font-size: 0.8125rem;
@@ -379,8 +383,10 @@ body {
     grid-row: 21 / 23;
     grid-column: 1 / -1;
   }
-  .ne-one-story-card {}
-  .ne-one-story-card-img-wrapper{}
+  .ne-one-story-card {
+  }
+  .ne-one-story-card-img-wrapper {
+  }
   .ne-one-story-card-img {
     max-width: 100%;
   }
@@ -388,7 +394,8 @@ body {
     padding: 0 1em 0 1em;
     margin: 1em 0;
   }
-  .ne-one-story-card-link {}
+  .ne-one-story-card-link {
+  }
   .ne-one-story-card-text {
     font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
     font-size: 1.875rem;
@@ -401,8 +408,10 @@ body {
     grid-row: 23 / 25;
     grid-column: 1 / -1;
   }
-  .ne-two-story-card {}
-  .ne-two-story-card-img-wrapper{}
+  .ne-two-story-card {
+  }
+  .ne-two-story-card-img-wrapper {
+  }
   .ne-two-story-card-img {
     max-width: 100%;
   }
@@ -410,7 +419,8 @@ body {
     padding: 0 1em 0 1em;
     margin: 1em 0;
   }
-  .ne-two-story-card-link {}
+  .ne-two-story-card-link {
+  }
   .ne-two-story-card-text {
     font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
     font-size: 1.875rem;
@@ -418,51 +428,50 @@ body {
   }
 
   /* --------------------------------- */
-    /* Trending Stories Section */
-    .opinion-section {
-      grid-row: 25 / 27;
-      grid-column: 1 / -1;
-      background-color: #424242;
-    }
-  
-    /* ----------------------------------- */
-    .tv-section {
-      grid-row: 27 / 29;
-      grid-column: 1 / -1;
-      background-color: #696969;
-    }
-    /* ----------------------------------- */
-    .ts-section {
-      grid-row: 29 / 31;
-      grid-column: 1 / -1;
-      background-color: #363636;
-    }
-    /* ----------------------------------- */
-    .itn-section {
-      grid-row: 31 / 33;
-      grid-column: 1 / -1;
-      background-color: #6d6d6d;
-    }
-    /* ----------------------------------- */
-    .partners-section {
-      grid-row: 33 / 35;
-      grid-column: 1 / -1;
-      background-color: #a8a8a8;
-    }
-    /* ----------------------------------- */
-    .video-section {
-      grid-row: 35 / 37;
-      grid-column: 1 / -1;
-      background-color: #8b8b8b;
-    }
-    /* ----------------------------------- */
-    .footer {
-      grid-row: 37 / 39;
-      grid-column: 1 / -1;
-      background-color: #000000;
-    }
-    /* ----------------------------------- */  
+  /* Trending Stories Section */
+  .opinion-section {
+    grid-row: 25 / 27;
+    grid-column: 1 / -1;
+    background-color: #424242;
+  }
 
+  /* ----------------------------------- */
+  .tv-section {
+    grid-row: 27 / 29;
+    grid-column: 1 / -1;
+    background-color: #696969;
+  }
+  /* ----------------------------------- */
+  .ts-section {
+    grid-row: 29 / 31;
+    grid-column: 1 / -1;
+    background-color: #363636;
+  }
+  /* ----------------------------------- */
+  .itn-section {
+    grid-row: 31 / 33;
+    grid-column: 1 / -1;
+    background-color: #6d6d6d;
+  }
+  /* ----------------------------------- */
+  .partners-section {
+    grid-row: 33 / 35;
+    grid-column: 1 / -1;
+    background-color: #a8a8a8;
+  }
+  /* ----------------------------------- */
+  .video-section {
+    grid-row: 35 / 37;
+    grid-column: 1 / -1;
+    background-color: #8b8b8b;
+  }
+  /* ----------------------------------- */
+  .footer {
+    grid-row: 37 / 39;
+    grid-column: 1 / -1;
+    background-color: #000000;
+  }
+  /* ----------------------------------- */
 }
 
 /* Small devices (tablets, 768px and up) */
@@ -793,7 +802,6 @@ body {
   }
   /* New title content */
   .ne-news-content-card-wrapper {
-
   }
   .ne-news-content-card {
     display: flex;
@@ -801,7 +809,6 @@ body {
     margin-bottom: 1em;
   }
   .ne-news-content-img-wrapper {
-
   }
   .ne-news-content-img {
     width: 448px;
@@ -809,26 +816,32 @@ body {
   .ne-news-content-wrapper {
     padding: 0 0.8em;
   }
-  .ne-news-content-headline {}
-  .ne-news-content-link {}
+  .ne-news-content-headline {
+  }
+  .ne-news-content-link {
+  }
   .ne-news-content-text {
     font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
     font-size: 2.375rem;
     line-height: 2.375rem;
     letter-spacing: 0.5px;
   }
-  .ne-news-content-details {}
+  .ne-news-content-details {
+  }
   .ne-news-content-des {
     margin: 0.5em 0;
   }
-  .ne-news-content-des-link {}
+  .ne-news-content-des-link {
+  }
   .ne-news-content-des-text {
     font-family: "ProximaNovaLight", Arial, Geneva, sans-serif;
     font-size: 1.125rem;
     line-height: 1.375rem;
   }
-  .ne-news-content-author {}
-  .ne-news-content-author-link {}
+  .ne-news-content-author {
+  }
+  .ne-news-content-author-link {
+  }
   .ne-news-content-author-text {
     color: #f83371;
     font-size: 0.8125rem;
@@ -846,7 +859,7 @@ body {
     display: flex;
     flex-direction: row;
   }
-  .ne-one-story-card-img-wrapper{
+  .ne-one-story-card-img-wrapper {
     width: 80%;
   }
   .ne-one-story-card-img {
@@ -855,7 +868,8 @@ body {
   .ne-one-story-card-details {
     padding: 0 1em 0 1em;
   }
-  .ne-one-story-card-link {}
+  .ne-one-story-card-link {
+  }
   .ne-one-story-card-text {
     font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
     font-size: 1.275rem;
@@ -872,7 +886,7 @@ body {
     display: flex;
     flex-direction: row;
   }
-  .ne-two-story-card-img-wrapper{
+  .ne-two-story-card-img-wrapper {
     width: 120%;
   }
   .ne-two-story-card-img {
@@ -881,7 +895,8 @@ body {
   .ne-two-story-card-details {
     padding: 0 1em 0 1em;
   }
-  .ne-two-story-card-link {}
+  .ne-two-story-card-link {
+  }
   .ne-two-story-card-text {
     font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
     font-size: 1.275rem;
@@ -890,11 +905,69 @@ body {
 
   /* --------------------------------- */
 
-  /* Trending Stories Section */
+  /* Opinions Section */
   .opinion-section {
-    grid-row: 16 / 19;
+    grid-row: 13 / 19;
     grid-column: 11 / 14;
-    background-color: #424242;
+  }
+  .os-section-wrapper {
+    padding: 0 0.5em;
+  }
+  .os-title-box {
+    display: grid;
+    grid-template-columns: 2fr 6fr;
+    grid-template-rows: 2.5em;
+  }
+  .os-title-flag {
+
+  }
+  .os-title-text-box {
+
+  }
+  .os-title-text {
+    font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
+    font-size: 1.0625rem;
+    font-style: italic;
+  }
+  .os-title-line-box {
+    padding: 1.5em 0.5em;
+  }
+  .os-title-line {
+    height: 3px;
+    background: #000000;
+  }
+  .os-card-wrapper {}
+  .os-card {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 0.8px solid #b6b6b6;
+    padding: 1em;
+  }
+  .os-card-img-wrapper {
+    height: 65px;
+    cursor: pointer;
+  }
+  .os-card-img {
+    /* width: 100%; */
+    height: 100%;
+    border-radius: 50%;
+    background-size: cover;
+  }
+  .os-card-details-box {}
+  .os-card-details-link {
+  }
+  .os-card-details-text {
+    padding: 0 1em;
+  }
+  .os-card-author-link {}
+  .os-card-author-text {
+    padding: 0 1em;
+    margin: 1em 0;
+    font-family: "ProximaNovaLight", Arial, Geneva, sans-serif;
+    color: #757575;
+    font-size: 0.8125rem;
+    line-height: 0.9375rem;
+    font-weight: normal;
   }
 
   /* ----------------------------------- */
@@ -934,6 +1007,4 @@ body {
     background-color: #000000;
   }
   /* ----------------------------------- */
-
-
 }
